# mac_os_bundle

./: CMakeLists.txt  README.md
include/: io_manager.h  main_window.h
src/: io_manager.cpp  main.cpp  main_window.cpp  main_window.ui
